# rag-system

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: cd.yaml  ci.yaml
frontend/: Dockerfile  index.html  tailwind.config.js
frontend/src/: api.js  app.js
infra/postgres/: init.sql
k8s/: namespace.yaml  serviceaccount.yaml  storageclass.yaml
k8s/auth/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/embedding/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/external-secrets/: external-secret.yaml  secret-store.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/gateway/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/ingestion/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/ingress/: aws-alb-ingress.yaml
k8s/observability/: README.md  collector-configmap.yaml  collector-deployment.yaml  collector-service.yaml
k8s/postgres/: pvc.yaml  service.yaml  statefulset.yaml
k8s/retrieval/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
services/api-gateway/: Dockerfile  pyproject.toml  ruff.toml
services/api-gateway/src/: config.py  main.py  proxy.py  security.py
services/api-gateway/tests/: conftest.py  test_gateway.py
services/auth-service/: Dockerfile  pyproject.toml  ruff.toml
services/auth-service/src/: config.py  db.py  main.py  models.py  schemas.py  security.py
services/auth-service/tests/: conftest.py  test_auth.py
services/embedding-service/: Dockerfile  pyproject.toml
services/embedding-service/src/: config.py  consumer.py  db.py  embedder.py  main.py  models.py  repository.py
services/embedding-service/tests/: conftest.py  test_handler.py  test_health.py  test_repository.py
services/ingestion-service/: Dockerfile  pyproject.toml  ruff.toml
services/ingestion-service/src/: config.py  db.py  detector.py  jobs.py  main.py  queue.py  storage.py
services/ingestion-service/src/chunkers/: __init__.py  fixed.py  recursive.py  sentence.py
services/ingestion-service/src/pipelines/: ocr.py  text.py
services/ingestion-service/tests/: conftest.py  test_chunkers.py  test_detector.py  test_ingest.py
services/retrieval-service/: Dockerfile  pyproject.toml  ruff.toml
services/retrieval-service/src/: config.py  embedder.py  llm.py  main.py  models.py  retriever.py  telemetry.py
services/retrieval-service/tests/: conftest.py  test_llm.py  test_query.py  test_retriever.py
