[project]
name = "embedding-service"
version = "0.1.0"
description = "Consumes chunks from SQS, embeds them, stores vectors in pgvector"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "boto3>=1.35",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic-settings>=2.6",
]

# Heavy ML stack (torch + model). Installed in the container, skipped for local dev/tests.
[project.optional-dependencies]
ml = ["sentence-transformers>=3.0"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
