[project]
name = "ingestion-service"
version = "0.1.0"
description = "Document ingestion, detection, and chunking for the RAG system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "boto3>=1.35",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "pillow>=11.0",
    "pytesseract>=0.3.13",
    "nltk>=3.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
