[project]
name = "retrieval-service"
version = "0.1.0"
description = "Hybrid retrieval + grounded Groq generation with SSE streaming"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "groq>=0.13",
    "pydantic-settings>=2.6",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-groq>=0.34",
]

# Shared embedder (must match embedding-service): bge-large via torch. Container-only.
[project.optional-dependencies]
ml = ["sentence-transformers>=3.0"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
